<resources>
    <string name="app_name">KET GROUP</string>
    <string name="satta_matka">KET GROUP</string>
    <string name="next">NEXT</string>
    <string name="finish">FINISH</string>
    <string name="earn_money">Earn Money</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="welcome">Welcome</string>
    <string name="skip_now">Skip Now</string>
    <string name="login_into">Login into</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="login_with_otp">Login With OTP</string>
    <string name="login">Login</string>
    <string name="register_to">Register To</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address (Optional)</string>
    <string name="already_member">Already Member ?</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_6_digit_otp">Enter 6 Digit OTP</string>
    <string name="enter_otp_sent_on_your_mobile_no">Enter OTP sent on your mobile no.</string>
    <string name="submit">Submit</string>
    <string name="haven_t_received_otp">Haven\'t received OTP ?</string>
    <string name="resend">Resend</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Test User</string>
    <string name="nav_header_subtitle">testuser@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="wallet">Wallet</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="home">Home</string>
    <string name="game_rates">Game Rates</string>
    <string name="game_history">Game History</string>
    <string name="chart">Chart</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="balance_sheet">Balance Sheet</string>
    <string name="view_ticket">View Ticket</string>
    <string name="logout">Logout</string>
    <string name="title_activity_single_digit">Single Digit Game</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tarang_market">KET Group Market</string>
    <string name="default_notification_channel_id">urgent_alert</string>
</resources>