<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/typeofotp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/redressed"
                    android:gravity="center"
                    android:text="@string/enter_otp"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/enter_otp_sent_on_your_mobile_no"
                    android:textColor="@color/purple_500" />


                <EditText
                    android:id="@+id/otpEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/enter_6_digit_otp"
                    android:inputType="number"
                    android:maxLength="6"
                    android:padding="15dp" />

                <Button
                    android:id="@+id/submitbutton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/buttonblue"
                    android:stateListAnimator="@drawable/card_smooth_shadow"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="17dp" />

                <LinearLayout
                    android:id="@+id/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/haven_t_received_otp"
                        android:textColor="@color/purple_500"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/resend"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/resend"
                        android:textColor="@color/purple_500"
                        android:textSize="12dp"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/regisfabcancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:src="@drawable/ic_close"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:useCompatPadding="true" />

    </LinearLayout>

</RelativeLayout>