<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="26dp">

            <TextView
                android:id="@+id/login_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_into"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_header_text"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/login_logo_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Mobile Number"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/mobile_no_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <EditText
                        android:id="@+id/mobile_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_background2"
                        android:hint="Mobile Number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Password"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_background2"
                    android:hint="Enter Password"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/forgot_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout2"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_password_button"
                android:orientation="vertical">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/buttonblue"
                    android:stateListAnimator="@drawable/card_smooth_shadow"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/login_otp_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/buttonblue"
                    android:stateListAnimator="@drawable/card_smooth_shadow"
                    android:text="@string/login_with_otp"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/buttonblue"
                    android:stateListAnimator="@drawable/card_smooth_shadow"
                    android:text="Register Now"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>